[gd_scene load_steps=32 format=2]

[ext_resource path="res://AnimationTests/Bobbing.gd" type="Script" id=1]
[ext_resource path="res://AnimationTests/Sprites/face.png" type="Texture" id=2]
[ext_resource path="res://AnimationTests/Sprites/dress.png" type="Texture" id=3]
[ext_resource path="res://AnimationTests/Sprites/broom.png" type="Texture" id=4]
[ext_resource path="res://AnimationTests/Sprites/wand.png" type="Texture" id=5]
[ext_resource path="res://AnimationTests/Sprites/hat.png" type="Texture" id=6]
[ext_resource path="res://AnimationTests/WandArm.gd" type="Script" id=7]
[ext_resource path="res://AnimationTests/Sprites/sparkle.png" type="Texture" id=8]
[ext_resource path="res://AnimationTests/Sprites/orb.png" type="Texture" id=9]
[ext_resource path="res://AnimationTests/WitchVisual.gd" type="Script" id=10]
[ext_resource path="res://sprites/explosion/spritesheet_purple.png" type="Texture" id=11]
[ext_resource path="res://sprites/shapes/explosion.png" type="Texture" id=12]

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 72, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 144, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 216, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 288, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 360, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 432, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 504, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 576, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 648, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 720, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 792, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 864, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 936, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1008, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1080, 0, 72, 72 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ null, SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), null ],
"loop": false,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.765909 ), 0.0, 0.0, 0, 0, Vector2( 0.992647, 0.0113636 ), -1.97818, 0.0, 0, 0 ]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0.8625 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -1.55715, 0.0, 0, 0 ]

[node name="WitchVisual" type="Node2D"]
script = ExtResource( 10 )

[node name="Broom" type="Sprite" parent="."]
rotation = -0.350788
scale = Vector2( 4.44311, 4.44311 )
z_index = 3
texture = ExtResource( 4 )
script = ExtResource( 1 )
speed = 3.0
magnitude = 3.0

[node name="BroomHair1" type="Line2D" parent="Broom"]
position = Vector2( -6.80489, -1.05208 )
rotation = 0.350788
scale = Vector2( 0.225067, 0.225067 )
z_index = -1
points = PoolVector2Array( 1, 3, -20, 3, -34, 0, -44, -6 )
width = 5.0
default_color = Color( 0.847059, 0.592157, 0.0117647, 1 )
antialiased = true

[node name="BroomHair2" type="Line2D" parent="Broom"]
position = Vector2( -6.74821, -0.552019 )
rotation = 0.350788
scale = Vector2( 0.225067, 0.225067 )
z_index = -1
points = PoolVector2Array( 1, 1, -20, 4, -35, 3, -48, 0 )
width = 5.0
default_color = Color( 0.847059, 0.592157, 0.0117647, 1 )
antialiased = true

[node name="BroomHair3" type="Line2D" parent="Broom"]
position = Vector2( -6.76888, 0.159406 )
rotation = 0.350788
scale = Vector2( 0.225067, 0.225067 )
z_index = -1
points = PoolVector2Array( 0, 0, -20, 4, -35, 5, -50, 5 )
width = 5.0
default_color = Color( 0.847059, 0.592157, 0.0117647, 1 )
antialiased = true

[node name="Broomhair4" type="Line2D" parent="Broom"]
position = Vector2( -7.0009, 0.793489 )
rotation = 0.350788
scale = Vector2( 0.225067, 0.225067 )
z_index = -1
points = PoolVector2Array( 0, -3, -20, 3, -34, 7, -48, 13 )
width = 5.0
default_color = Color( 0.847059, 0.592157, 0.0117647, 1 )
antialiased = true

[node name="Broomhair5" type="Line2D" parent="Broom"]
position = Vector2( -6.50084, 0.736813 )
rotation = 0.350788
scale = Vector2( 0.225067, 0.225067 )
z_index = -1
points = PoolVector2Array( -1, -1, -20, 7, -34, 14, -45, 22 )
width = 5.0
default_color = Color( 0.847059, 0.592157, 0.0117647, 1 )
antialiased = true

[node name="Broomhair6" type="Line2D" parent="Broom"]
position = Vector2( -6.73286, 1.3709 )
rotation = 0.350788
scale = Vector2( 0.225067, 0.225067 )
z_index = -1
points = PoolVector2Array( -1, -2, -23, 9, -32, 17, -39, 26 )
width = 5.0
default_color = Color( 0.847059, 0.592157, 0.0117647, 1 )
antialiased = true

[node name="Torso" type="Sprite" parent="Broom"]
position = Vector2( 1.89222, -3.86118 )
rotation = 0.350788
scale = Vector2( 1.055, 1.055 )
z_index = -1
texture = ExtResource( 3 )
script = ExtResource( 1 )
speed = 3.0
magnitude = 0.2
timing_offset = 0.25

[node name="WandArm" type="Line2D" parent="Broom/Torso"]
position = Vector2( 1.92, -1.70667 )
scale = Vector2( 0.213333, 0.213333 )
z_index = -1
points = PoolVector2Array( 0, 0, 12, -1, 23.0001, -6.00006 )
width = 3.0
default_color = Color( 0, 0, 0, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true
script = ExtResource( 7 )

[node name="Wand" type="Sprite" parent="Broom/Torso/WandArm"]
position = Vector2( 21.0001, -6.00006 )
rotation = -0.350788
scale = Vector2( 3.05322, 3.05322 )
texture = ExtResource( 5 )
offset = Vector2( 8.072, 0 )

[node name="FrontArm" type="Line2D" parent="Broom/Torso"]
position = Vector2( -1.49333, -1.49333 )
scale = Vector2( 0.213333, 0.213333 )
points = PoolVector2Array( 2, 1, 9, 10, 19, 14 )
width = 3.0
default_color = Color( 0, 0, 0, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Head" type="Sprite" parent="Broom/Torso"]
position = Vector2( -2.38419e-07, -5.97333 )
scale = Vector2( 0.616667, 0.616667 )
texture = ExtResource( 2 )
script = ExtResource( 1 )
speed = 3.0
magnitude = 0.2
timing_offset = 0.5

[node name="Hat" type="Sprite" parent="Broom/Torso/Head"]
position = Vector2( -3.45946, -9.68648 )
scale = Vector2( 1.9027, 1.9027 )
texture = ExtResource( 6 )
script = ExtResource( 1 )
speed = 3.0
magnitude = 0.2
timing_offset = 0.75

[node name="Hair1" type="Line2D" parent="Broom/Torso/Head"]
position = Vector2( -9.34054, -1.38378 )
scale = Vector2( 0.345946, 0.345946 )
z_index = -2
points = PoolVector2Array( 0, 0, 1, 19, -2, 29, -12, 31 )
width = 7.0
default_color = Color( 0.756863, 0.376471, 0.172549, 1 )
antialiased = true

[node name="Hair2" type="Line2D" parent="Broom/Torso/Head"]
position = Vector2( -7.26486, -0.691892 )
scale = Vector2( 0.345946, 0.345946 )
z_index = -2
points = PoolVector2Array( 0, 0, 0, 21, -4, 32, -12, 37 )
width = 7.0
default_color = Color( 0.756863, 0.376471, 0.172549, 1 )
antialiased = true

[node name="Hair3" type="Line2D" parent="Broom/Torso/Head"]
position = Vector2( -4.84324, -0.345946 )
scale = Vector2( 0.345946, 0.345946 )
z_index = -2
points = PoolVector2Array( 0, 0, -1, 20, -5, 34, -13, 43 )
width = 7.0
default_color = Color( 0.756863, 0.376471, 0.172549, 1 )
antialiased = true

[node name="Hair4" type="Line2D" parent="Broom/Torso/Head"]
position = Vector2( -2.42162, 1.78814e-07 )
scale = Vector2( 0.345946, 0.345946 )
z_index = -2
points = PoolVector2Array( 0, 0, -2, 20, -5, 33, -10, 44 )
width = 7.0
default_color = Color( 0.756863, 0.376471, 0.172549, 1 )
antialiased = true

[node name="Hair5" type="Line2D" parent="Broom/Torso/Head"]
position = Vector2( 4.15135, -0.345946 )
scale = Vector2( 0.345946, 0.345946 )
z_index = -2
points = PoolVector2Array( 0, 0, 0, 22, 3, 29, 8, 34 )
width = 7.0
default_color = Color( 0.756863, 0.376471, 0.172549, 1 )
antialiased = true

[node name="Hair6" type="Line2D" parent="Broom/Torso/Head"]
position = Vector2( 4.84324, -3.45946 )
scale = Vector2( 0.345946, 0.345946 )
z_index = -2
points = PoolVector2Array( 0, 0, 3, 25, 5, 30, 9, 33 )
width = 7.0
default_color = Color( 0.756863, 0.376471, 0.172549, 1 )
antialiased = true

[node name="BackLeg" type="Line2D" parent="Broom"]
position = Vector2( 3.17573, -1.47422 )
rotation = 0.350788
scale = Vector2( 0.225067, 0.225067 )
z_index = -2
points = PoolVector2Array( -2, 3, 10, 1, 9, 12, 14, 12 )
width = 3.0
default_color = Color( 0, 0, 0, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="FrontLeg" type="Line2D" parent="Broom"]
position = Vector2( -0.381395, -1.57753 )
rotation = 0.350788
scale = Vector2( 0.225067, 0.225067 )
points = PoolVector2Array( -2, 3, 10, 1, 9, 12, 14, 12 )
width = 3.0
default_color = Color( 0, 0, 0, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="Broom"]
position = Vector2( 3.19168, -9.37725 )
rotation = 0.350788
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 19 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Broom"]
position = Vector2( -10, 0 )
rotation = 1.5708
z_index = -2
amount = 4
lifetime = 0.75
randomness = 0.76
texture = ExtResource( 8 )
direction = Vector2( 0, 1 )
spread = 37.5
initial_velocity = 20.0
initial_velocity_random = 0.39
angle_random = 0.64
scale_amount = 0.7
scale_amount_random = 0.3
scale_amount_curve = SubResource( 1 )

[node name="WandParticles" type="CPUParticles2D" parent="."]
position = Vector2( 77.8763, -49.7871 )
scale = Vector2( 3.0532, 3.0532 )
z_index = 3
emitting = false
amount = 3
lifetime = 0.5
one_shot = true
explosiveness = 1.0
texture = ExtResource( 9 )
direction = Vector2( 1, -0.5 )
spread = 75.0
gravity = Vector2( 0, 0 )
initial_velocity = 20.0
scale_amount_curve = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 2.00002, -19 )
scale = Vector2( 4.68748, 4.68748 )
current = true

[node name="shield" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -23 )
scale = Vector2( 7, 7 )
texture = ExtResource( 12 )
